ansible/roles/K8s-deploy-jenkins/files/GUIA-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-tools
  namespace: devops-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-tools
  template:
    metadata:
      labels:
        app: devops-tools
    spec:
      securityContext:
            fsGroup: 1000 
            runAsUser: 1000
      serviceAccountName: jenkins-admin
      containers:
        - name: devops-tools
          image: jenkins/jenkins:lts
          resources:
            limits:
              memory: "2Gi"
              cpu: "1000m"
            requests:
              memory: "500Mi"
              cpu: "500m"
          ports:
            - name: httpport
              containerPort: 80
            - name: jnlpport
              containerPort: 50000
          livenessProbe:
            httpGet:
              path: "/login"
              port: 80
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: "/login"
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: jenkins-data
              mountPath: /var/jenkins_home         
      volumes:
        - name: jenkins-data
          persistentVolumeClaim:
              claimName: jenkins-pv-claim
---
apiVersion: v1
kind: Service
metadata:
    name: webapp-service
    namespace: devops-tools
spec:
    selector:
      app: devops-tools
    ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
