ansible/roles/K8s-deploy-jenkins/files/GUIA-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: devops-tools
  labels:
    app: devops-tools
  annotations:
      haproxy.org/path-rewrite: "/"
spec:
  rules:
  - host: foo.bar
    http:
      paths:
      - path: /devops-tools
        pathType: "Prefix"
        backend:
          service:
            name: webapp-service
            port:
              number: 80
